<resources>
    <string name="app_name">JeuChatton</string>
    <string name="local_test">Localisation Français!</string>


    <string name="blackjack_hit">Prochaine</string>
    <string name="blackjack_hold">Garde</string>
    <string name="blackjack_perdu">Vous avez perdu :(</string>
    <string name="blackjack_gagner">Vous avez gagné : </string>
    <string name="blackjack_egaliter">Égalité :| !</string>
    <string name="blackjack_points">points</string>
    <string name="blackjack_sespoints">Ses points :</string>
    <string name="blackjack_mespoints">Mes points :</string>

    <string name="poker_valider">Valider</string>
    <string name="poker_rejouer">Rejouer</string>
    <string name="poker_affichergrille">Afficher Grille</string>


    <string name="argent">Argent : </string>
    <string name="miser">Miser</string>

    <string name="blackjack">Blackjack</string>
    <string name="pyramide">Pyramide</string>
    <string name="jeudu31">Jeu du 31</string>
    <string name="solitaire">Solitaire</string>
    <string name="videopoker">Vidéo Poker</string>
    <string name="inconnue">Inconnu</string>
    <string name="cogner">Un opposant a cogné!</string>
    <string name="recommencer">Appuyez sur recommencer</string>
    <string name="jouer">Jouez</string>
    <string name="misez">Mettez une mise</string>


    <string name="pyramide_montantTotal">Montant total : </string>
    <string name="pyramide_montantMise">Montant de la mise : </string>
    <string name="pyramide_montantGagné">Montant gagné : </string>
    <string name="pyramide_montantPerdu">Montant perdu : </string>
    <string name="pyramide_partieGagnée">Partie gagnée!</string>
    <string name="pyramide_partiePerdue">Partie perdue...</string>

    <string name="title_activity_jeudu31activite">jeudu31activite</string>
</resources>
