<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/pokerbackground">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:src="@drawable/pokergrid"
        android:onClick="onGridClick"
        android:id="@+id/grille"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/table">
        <TableRow
            android:layout_gravity="left">

            <Button
                android:src="@drawable/clubs_2"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_column="5"
                android:id="@+id/btnAfficher"
                android:text="@string/poker_affichergrille"
                android:onClick="onAfficherClick"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:id="@+id/imgVideo1"
                android:layout_column="1"
                android:src="@drawable/spades_a"
                android:onClick="onCardVideoClick"
                android:adjustViewBounds="true"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:cropToPadding="false"
                android:padding="5dp" />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:id="@+id/imgVideo2"
                android:layout_column="1"
                android:src="@drawable/spades_a"
                android:onClick="onCardVideoClick"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:padding="5dp" />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:id="@+id/imgVideo3"
                android:layout_column="1"
                android:src="@drawable/spades_a"
                android:onClick="onCardVideoClick"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp" />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:id="@+id/imgVideo4"
                android:layout_column="1"
                android:src="@drawable/spades_a"
                android:onClick="onCardVideoClick"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp" />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:id="@+id/imgVideo5"
                android:layout_column="1"
                android:src="@drawable/spades_a"
                android:onClick="onCardVideoClick"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp" />
            </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poker_valider"
                android:id="@+id/btnValiderVideo"
                android:layout_column="1"
                android:layout_span="2"
                android:onClick="onValiderVideoClick" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miser"
                android:id="@+id/btnMiser"
                android:layout_column="1"
                android:layout_span="1"
                android:onClick="onMiserClick" />

            <NumberPicker
                android:id="@+id/nbpMise"
                android:layout_width="40dp"
                android:layout_height="130dp"/>
            <TextView
                android:text="Argent:"
                android:id="@+id/lblArgent"
                android:layout_column="1"
                android:textSize="20dp"
                />

            </TableRow>
    </TableLayout>
</RelativeLayout>
