<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="blackjack.BlackJackActivity"
    android:background="@drawable/blackjackbackground">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgEndos"
                android:src="@drawable/back"
                android:layout_gravity="bottom"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgDealer1"
                android:src="@drawable/spades_a"
                android:layout_gravity="bottom"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgDealer2"
                android:src="@drawable/spades_2"
                android:layout_gravity="bottom"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgDealer3"
                android:src="@drawable/spades_3"
                android:layout_gravity="bottom"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgDealer4"
                android:src="@drawable/spades_4"
                android:layout_gravity="bottom"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgDealer5"
                android:src="@drawable/spades_4"
                android:layout_gravity="bottom"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgDealer6"
                android:layout_column="2"
                android:src="@drawable/spades_6"
                android:layout_gravity="top"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgDealer7"
                android:layout_column="3"
                android:src="@drawable/spades_7"
                android:layout_gravity="top"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgDealer8"
                android:layout_column="4"
                android:src="@drawable/spades_8"
                android:layout_gravity="top"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgDealer9"
                android:layout_column="5"
                android:src="@drawable/spades_9"
                android:layout_gravity="top"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/argent"
            android:id="@+id/lblArgent"
            android:layout_column="2"
            android:layout_span="2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:id="@+id/lblMise"
                android:layout_column="2"
                android:layout_span="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/blackjack_sespoints"
                android:id="@+id/lblCroupier"
                android:layout_column="8"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="0 points"
                android:id="@+id/lblPointsCroupier"
                android:layout_column="9" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/blackjack_mespoints"
                android:id="@+id/lblJoueur"
                android:layout_column="8"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="0 points"
                android:id="@+id/lblPointsJoueur"
                android:layout_column="9" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgCarte1"
                android:layout_column="1"
                android:src="@drawable/spades_a"
                android:layout_gravity="bottom"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgCarte2"
                android:layout_column="2"
                android:src="@drawable/spades_2"
                android:layout_gravity="bottom"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgCarte3"
                android:layout_column="3"
                android:src="@drawable/spades_3"
                android:layout_gravity="bottom"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgCarte4"
                android:layout_column="4"
                android:src="@drawable/spades_4"
                android:layout_gravity="bottom"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgCarte5"
                android:layout_column="5"
                android:src="@drawable/spades_5"
                android:layout_gravity="bottom"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hit"
                android:layout_gravity="bottom"
                android:id="@+id/btnHit"
                android:layout_column="8"
                android:onClick="onHitClick"
                android:layout_marginLeft="50dp"
               />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgCarte6"
                android:layout_column="1"
                android:src="@drawable/spades_6"
                android:layout_gravity="bottom"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgCarte7"
                android:layout_column="2"
                android:src="@drawable/spades_7"
                android:layout_gravity="bottom"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgCarte8"
                android:layout_column="3"
                android:src="@drawable/spades_8"
                android:layout_gravity="bottom"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:id="@+id/imgCarte9"
                android:layout_column="4"
                android:src="@drawable/spades_9"
                android:layout_gravity="bottom"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hold"
                android:id="@+id/btnHold"
                android:layout_column="8"
                android:layout_gravity="bottom"
                android:onClick="onHoldClick"
                android:layout_marginLeft="50dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miser"
                android:layout_gravity="bottom"
                android:id="@+id/btnMise"
                android:layout_column="7"
                android:onClick="onMiseClick"
                />
        </TableRow>
    </TableLayout>
</RelativeLayout>
